# city2graph-workshop

./: .gitignore  README.md  pyproject.toml
notebooks/: city2graph_overture.ipynb  part2_geoai.ipynb
src/: build_graph.py  create_thumbnail.py  part1_agenda.md  poi_and_land_uses.py
